hphp/test/slow/ext_xdebug/halt_level.php.expectf
Notice: Test notice in %s/test/slow/ext_xdebug/halt_level.php on line 3
%w#0 trigger_error(), called at [%s/hphp/test/slow/ext_xdebug/halt_level.php:3]

Deprecated: Test deprecated in %s/test/slow/ext_xdebug/halt_level.php on line 4
%w#0 trigger_error(), called at [%s/hphp/test/slow/ext_xdebug/halt_level.php:4]

Deprecated: Test deprecated in %s/test/slow/ext_xdebug/halt_level.php on line 6
%w#0 trigger_error(), called at [%s/hphp/test/slow/ext_xdebug/halt_level.php:6]

Fatal error: Test notice in %s/test/slow/ext_xdebug/halt_level.php on line 7
